--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,7 @@ spring.application.name=crudPruebaFabi
 
 spring.datasource.url=jdbc:mysql://localhost:3306/bdFabi
 spring.datasource.username=root
-spring.datasource.password=
+spring.datasource.password=Andreev@1408
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
 
