Add Validation Methods

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 spring.application.name=crudPruebaFabi
 
-spring.datasource.url=jdbc:mysql://localhost:3306/bdFabi
+spring.datasource.url=jdbc:mysql://localhost:3306/base2
 spring.datasource.username=root
-spring.datasource.password=Andreev@1408
+spring.datasource.password=
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
 
